--- a/miProyecto/views/index.ejs
+++ b/miProyecto/views/index.ejs
@@ -6,6 +6,74 @@
   <body>
     <%- include('./partials/header') %>
     <main>
+      <section>
+        <div class="intro">
+          <img claas="intro-image" src="/images/products/taza-azul.png" alt="taza azul" width="30%">
+          <div class="intro-text">Cerámicas hechas con amor</div>
+        </div>
+      </section>
+      <section id="type-product-1">
+        <div class="type-product-plate">
+          <div class="type-product-name">Platos</div>
+          <div class="flex-types-product">
+            <div class="type-plato">
+              <div class="type-img">
+                <img src="/images/products/plato-playo2-copy-baja1-423a3919271206888315598402081460-480-0.jpg" alt="" width="350px">
+              </div>
+              <div class="type-name">
+                Plato Playo
+              </div>
+            </div>
+            <div class="type-plato">
+              <div class="type-img">
+                <img src="/images/products/plato-hondo-1-copy-baja21001-b4dc02680038f8986615477356591356-1024-1024.jpg" alt="" width="350px">
+              </div>
+              <div class="type-name">
+                Plato Hondo
+              </div>
+            </div>
+            <div class="type-plato">
+              <div class="type-img">
+                <img src="/images/products/plato-playo2-copy-baja1-423a3919271206888315598402081460-480-0.jpg" alt="" width="350px">
+              </div>
+              <div class="type-name">
+                Plato Postre
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="type-product-2">
+        <div class="type-product-cup">
+          <div class="type-product-name">Tazas</div>
+          <div class="flex-types-product">
+            <div class="type-taza">
+              <div class="type-img">
+                <img src="/images/products/taza-cilindro.jpg" alt="" width="350px">
+              </div>
+              <div class="type-name">
+                Taza Cilindro
+              </div>
+            </div>
+            <div class="type-taza">
+              <div class="type-img">
+                <img src="/images/products/taza-grande.png" alt="" width="350px">
+              </div>
+              <div class="type-name">
+                Taza Grande
+              </div>
+            </div>
+            <div class="type-taza">
+              <div class="type-img">
+                <img src="/images/products/taza-cafe-con-leche.png" alt="" width="350px">
+              </div>
+              <div class="type-name">
+                Taza Café con Leche
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <%- include('./partials/footer') %>
   </body>
