--- a/miProyecto/public/css/header.css
+++ b/miProyecto/public/css/header.css
@@ -1,6 +1,9 @@
 .header--container {
     background-color: #fff2e2;
-    position: sticky;
+    position: fixed;
+    opacity: 90%;
+    z-index: unset;
+    width:100%;
 }
 
 .header--logo {
@@ -50,6 +53,6 @@
     }
 
     .header--nav-desktop li:hover {
-        font-size: 26px;
+        font-size: 25.5px;
     }
 }
