--- a/miProyecto/views/partials/footer.ejs
+++ b/miProyecto/views/partials/footer.ejs
@@ -1,4 +1,22 @@
 <footer>
+    <section>
+            <div class="footer--container">
+                <div class="footer-follow">
+                    ¡Seguinos en nuestras redes!
+                </div>
+                <nav class="footer--nav-desktop">
+                    <div>
+                        <li><a href="/"><i class="fa-brands fa-square-facebook"></i></a></li>
+                        <li><a href="/productdetail"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="/login"><i class="fa-brands fa-whatsapp"></i></a></li>
+                    </div>
+                </nav>
+                <a href="/" class="footer--logo">
+                    Ponucha
+                </a>
+            </div>
+    </section>
+    
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
