--- a/miProyecto/views/partials/header.ejs
+++ b/miProyecto/views/partials/header.ejs
@@ -7,8 +7,8 @@
         </div>
         <nav class="header--nav-desktop">
             <div>
-                <li><a href="/index">Home</a></li>
-                <li><a href="/productdetail">Detalle de Producto</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/product">Detalle de Producto</a></li>
                 <li><a href="/login">Formulario de Logueo</a></li>
                 <li><a href="/register">Formulario de Registro</a></li>
             </div>
