product page structured and some css

--- a/miProyecto/views/product.ejs
+++ b/miProyecto/views/product.ejs
@@ -6,79 +6,59 @@
   <body>
     <%- include('./partials/header') %>
     <main>
-      <section>
-        <div class="intro">
-          <img claas="intro-image" src="/images/products/taza-azul.png" alt="taza azul" width="30%">
-          <div class="intro-text">
-            <div class="intro-logo">
-              <a href="/">
-                Ponucha
-              </a>
+      <section class="product-info">
+        <div class="product">
+          <div class="product-name">
+            <p>Plato Playo</p>
+          </div>
+          <div class="product-choice">
+            <div class="product--choice-premise">
+              <p>Elige tu diseño favorito</p>
+          </div>
+          <div class="product--choice-container">
+            <div class="product--choice-image">
+              <img src="/images/products/plato-playo2-copy-baja1-423a3919271206888315598402081460-480-0.jpg" alt="plato playo" width="350px">
             </div>
-            <div class="intro-legend">Cerámicas hechas con amor</div>
+            <div class="product--choice-designs-flex">
+              <div class="product--choice-designs-solo">
+                <div class="product--choice-designs-solo-image">
+                  <img src="/images/products/designs/black-design.jpg" alt="" width="50px">
+                </div>
+                <div class="product--choice-designs-solo-title"><p>Diseño negro</p></div>
+              </div>
+              <div class="product--choice-designs-solo">
+                <div class="product--choice-designs-solo-image">
+                  <img src="/images/products/designs/orange-design.jpg" alt="" width="50px">
+                </div>
+                <div class="product--choice-designs-solo-title"><p>Diseño naranja</p></div>
+              </div>
+              <div class="product--choice-designs-solo">
+                <div class="product--choice-designs-solo-image">
+                  <img src="/images/products/designs/blue-design.png" alt="" width="50px">
+                </div>
+                <div class="product--choice-designs-solo-title"><p>Diseño azul</p></div>
+              </div>
+              <div class="product--choice-designs-solo">
+                <div class="product--choice-designs-solo-image">
+                  <img src="/images/products/designs/butterfly-design.jpg" alt="" width="50px">
+                </div>
+                <div class="product--choice-designs-solo-title"><p>Diseño mariposa</p></div>
+              </div>
+            </div>
+          </div>
           </div>
         </div>
       </section>
-      <section id="type-product-1">
-        <div class="type-product-plate">
-          <div class="type-product-name">Platos</div>
-          <div class="flex-types-product">
-            <div class="type-plato">
-              <div class="type-img">
-                <img src="/images/products/plato-playo2-copy-baja1-423a3919271206888315598402081460-480-0.jpg" alt="" width="350px">
-              </div>
-              <div class="type-name">
-                Plato Playo
-              </div>
-            </div>
-            <div class="type-plato">
-              <div class="type-img">
-                <img src="/images/products/plato-hondo-1-copy-baja21001-b4dc02680038f8986615477356591356-1024-1024.jpg" alt="" width="350px">
-              </div>
-              <div class="type-name">
-                Plato Hondo
-              </div>
-            </div>
-            <div class="type-plato">
-              <div class="type-img">
-                <img src="/images/products/plato-playo2-copy-baja1-423a3919271206888315598402081460-480-0.jpg" alt="" width="350px">
-              </div>
-              <div class="type-name">
-                Plato Postre
-              </div>
-            </div>
+      <section class="product-prize">
+        <div class="product--prize-flex">
+          <div class="product--prize-digits">
+            <p>Precio</p>
+            <p>$150,00</p>
           </div>
         </div>
-      </section>
-      <section id="type-product-2">
-        <div class="type-product-cup">
-          <div class="type-product-name">Tazas</div>
-          <div class="flex-types-product">
-            <div class="type-taza">
-              <div class="type-img">
-                <img src="/images/products/taza-cilindro.jpg" alt="" width="350px">
-              </div>
-              <div class="type-name">
-                Taza Cilindro
-              </div>
-            </div>
-            <div class="type-taza">
-              <div class="type-img">
-                <img src="/images/products/taza-grande.png" alt="" width="350px">
-              </div>
-              <div class="type-name">
-                Taza Grande
-              </div>
-            </div>
-            <div class="type-taza">
-              <div class="type-img">
-                <img src="/images/products/taza-cafe-con-leche.png" alt="" width="350px">
-              </div>
-              <div class="type-name">
-                Taza Café con Leche
-              </div>
-            </div>
-          </div>
+        <div class="product--cart-button">
+          <p>Agregar al carrito</p>
+          <i class="fa-solid fa-cart-shopping"></i>
         </div>
       </section>
     </main>
