--- a/miProyecto/public/css/style.css
+++ b/miProyecto/public/css/style.css
@@ -1,6 +1,7 @@
 @import url('./header.css');
 @import url('./index.css');
 @import url('./footer.css');
+@import url('./product.css');
 
 @import url('https://fonts.googleapis.com/css2?family=Borel&family=Delius&display=swap');
 
