--- a/miProyecto/views/product.ejs
+++ b/miProyecto/views/product.ejs
@@ -6,61 +6,63 @@
   <body>
     <%- include('./partials/header') %>
     <main>
-      <section class="product-info">
-        <div class="product">
-          <div class="product-name">
-            <p>Plato Playo</p>
-          </div>
-          <div class="product-choice">
-            <div class="product--choice-premise">
-              <p>Elige tu diseño favorito</p>
-          </div>
-          <div class="product--choice-container">
-            <div class="product--choice-image">
-              <img src="/images/products/plato-playo2-copy-baja1-423a3919271206888315598402081460-480-0.jpg" alt="plato playo" width="350px">
+        <section class="product-info">
+          <div class="product">
+            <div class="product-name">
+              <p>Plato Playo</p>
             </div>
-            <div class="product--choice-designs-flex">
-              <div class="product--choice-designs-solo">
-                <div class="product--choice-designs-solo-image">
-                  <img src="/images/products/designs/black-design.jpg" alt="" width="50px">
-                </div>
-                <div class="product--choice-designs-solo-title"><p>Diseño negro</p></div>
+            <div class="product-choice">
+              <div class="product--choice-premise">
+                <p>Elige tu diseño favorito</p>
+            </div>
+            <div class="product--choice-container col-6">
+              <div class="product--choice-image">
+                <img src="/images/products/plato-playo2-copy-baja1-423a3919271206888315598402081460-480-0.jpg" alt="plato playo" width="350px">
               </div>
-              <div class="product--choice-designs-solo">
-                <div class="product--choice-designs-solo-image">
-                  <img src="/images/products/designs/orange-design.jpg" alt="" width="50px">
+              <div class="product--choice-designs-flex">
+                <div class="product--choice-designs-solo">
+                  <div class="product--choice-designs-solo-image">
+                    <img src="/images/products/designs/black-design.jpg" alt="" width="50px">
+                  </div>
+                  <div class="product--choice-designs-solo-title"><p>Diseño negro</p></div>
                 </div>
-                <div class="product--choice-designs-solo-title"><p>Diseño naranja</p></div>
-              </div>
-              <div class="product--choice-designs-solo">
-                <div class="product--choice-designs-solo-image">
-                  <img src="/images/products/designs/blue-design.png" alt="" width="50px">
+                <div class="product--choice-designs-solo">
+                  <div class="product--choice-designs-solo-image">
+                    <img src="/images/products/designs/orange-design.jpg" alt="" width="50px">
+                  </div>
+                  <div class="product--choice-designs-solo-title"><p>Diseño naranja</p></div>
                 </div>
-                <div class="product--choice-designs-solo-title"><p>Diseño azul</p></div>
-              </div>
-              <div class="product--choice-designs-solo">
-                <div class="product--choice-designs-solo-image">
-                  <img src="/images/products/designs/butterfly-design.jpg" alt="" width="50px">
+                <div class="product--choice-designs-solo">
+                  <div class="product--choice-designs-solo-image">
+                    <img src="/images/products/designs/blue-design.png" alt="" width="50px">
+                  </div>
+                  <div class="product--choice-designs-solo-title"><p>Diseño azul</p></div>
                 </div>
-                <div class="product--choice-designs-solo-title"><p>Diseño mariposa</p></div>
+                <div class="product--choice-designs-solo">
+                  <div class="product--choice-designs-solo-image">
+                    <img src="/images/products/designs/butterfly-design.jpg" alt="" width="50px">
+                  </div>
+                  <div class="product--choice-designs-solo-title"><p>Diseño mariposa</p></div>
+                </div>
               </div>
             </div>
+            </div>
           </div>
+        </section>
+        <section class="product-price">
+          <div class="product--price-container">
+            <div class="product--price-flex">
+              <div class="product--price-digits">
+                <p>Precio</p>
+                <p class="price">$150,00</p>
+              </div>
+            </div>
+            <div class="product--cart-button">
+              <p>Agregar al carrito</p>
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
           </div>
-        </div>
-      </section>
-      <section class="product-prize">
-        <div class="product--prize-flex">
-          <div class="product--prize-digits">
-            <p>Precio</p>
-            <p>$150,00</p>
-          </div>
-        </div>
-        <div class="product--cart-button">
-          <p>Agregar al carrito</p>
-          <i class="fa-solid fa-cart-shopping"></i>
-        </div>
-      </section>
+        </section>
     </main>
     <%- include('./partials/footer') %>
   </body>
