little changes in css

--- a/miProyecto/views/product.ejs
+++ b/miProyecto/views/product.ejs
@@ -6,7 +6,8 @@
   <body>
     <%- include('./partials/header') %>
     <main>
-        <section class="product-info">
+      <section class="product-total">
+        <article class="product-info">
           <div class="product">
             <div class="product-name">
               <p>Plato Playo</p>
@@ -48,8 +49,8 @@
             </div>
             </div>
           </div>
-        </section>
-        <section class="product-price">
+        </article>
+        <article class="product-price">
           <div class="product--price-container">
             <div class="product--price-flex">
               <div class="product--price-digits">
@@ -62,7 +63,8 @@
               <i class="fa-solid fa-cart-shopping"></i>
             </div>
           </div>
-        </section>
+        </article>
+      </section>
     </main>
     <%- include('./partials/footer') %>
   </body>
