--- a/miProyecto/public/css/product.css
+++ b/miProyecto/public/css/product.css
@@ -6,6 +6,12 @@ p {
     font-family: "Borel", cursive;
 }
 
+.product-total {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 /*SOBRE EL PRODUCTO*/
 
 .product {
@@ -13,6 +19,7 @@ p {
     flex-direction: column;
     padding-top: 150px;
     text-align: center;
+    justify-content: center;
 }
 
 .product-name {
@@ -60,6 +67,7 @@ p {
     text-align: center;
     padding: 30px;
     border-radius: 15px;
+    margin:auto
 }
 
 .product--price-digits {
@@ -85,5 +93,6 @@ p {
 }
 
 .product--cart-button i {
-    align-content: baseline;
+    align-content: center;
+    padding: 8px;
 }
