--- a/miProyecto/public/css/style.css
+++ b/miProyecto/public/css/style.css
@@ -2,6 +2,8 @@
 @import url('./index.css');
 @import url('./footer.css');
 @import url('./product.css');
+@import url('./login.css');
+@import url('./register.css');
 
 @import url('https://fonts.googleapis.com/css2?family=Borel&family=Delius&display=swap');
 
