--- a/miProyecto/views/partials/header.ejs
+++ b/miProyecto/views/partials/header.ejs
@@ -11,6 +11,7 @@
                 <li><a href="/product">Detalle de Producto</a></li>
                 <li><a href="/login">Formulario de Logueo</a></li>
                 <li><a href="/register">Formulario de Registro</a></li>
+                <li><a href="/create" class="href"></a></li>
             </div>
         </nav>
     </div>
