Formulario de Producto

--- a/miProyecto/views/products/detail.ejs
+++ b/miProyecto/views/products/detail.ejs
@@ -35,7 +35,7 @@
                     <div class="mb-3">
                         <label for="email" class="form-label">Imágen</label>
                         <input type="text" class="form-control" id="image" name="image" placeholder="Imágen del Producto"
-                        <p class="form-text alert-hide">Obligatorio</>
+                        <p class="form-text alert-hide">Obligatorio</p>
                     </div>
                     <!-- input Categoría -->
                     <div class="mb-3">
