--- a/miProyecto/views/index.ejs
+++ b/miProyecto/views/index.ejs
@@ -19,13 +19,23 @@
           </div>
         </div>
       </section>
+      <section id="comissions">
+        <div class="comissions-box">
+          <div class="comissions-box--title">Personalizá tu diseño con <p>amor</p></div>
+          <div class="comissions-box--premise"><div>¡Abrimos nuestro servicio de comisiones!</div><div>¿Querés que tu vajilla tenga un diseño único?</div></div>
+          <div class="comissions-box--button">
+            <a href="https://wa.me/1126967301"></a><p><a href="https://wa.me/1126967301">¡Escribinos!</p></a>
+          </div>
+        </div>
+        </div>
+      </section>
       <section id="type-product-1">
         <div class="type-product-plate">
           <div class="type-product-name">Platos</div>
           <div class="flex-types-product">
             <div class="type-plato">
               <div class="type-img">
-                <img src="/images/products/plato-playo2-copy-baja1-423a3919271206888315598402081460-480-0.jpg" alt="" width="350px">
+                <a href="/products/detail" class="href"><img src="/images/products/plato-playo2-copy-baja1-423a3919271206888315598402081460-480-0.jpg" alt="" width="350px"></a>
               </div>
               <div class="type-name">
                 Plato Playo
