--- a/miProyecto/views/partials/header.ejs
+++ b/miProyecto/views/partials/header.ejs
@@ -1,5 +1,10 @@
 <header>
     <div class="header--container">
+        <div class="header--user">
+        <li><a href="/users/login">Iniciar Sesión</a></li>
+        <li><p>|</p></li>
+        <li><a href="/users/register">Registrarse</a></li>
+            </div>
         <div>
             <a href="/" class="header--logo">
                 Ponucha
@@ -7,11 +12,13 @@
         </div>
         <nav class="header--nav-desktop">
             <div>
-                <li><a href="/">Home</a></li>
-                <li><a href="/product">Detalle de Producto</a></li>
-                <li><a href="/login">Formulario de Logueo</a></li>
-                <li><a href="/register">Formulario de Registro</a></li>
-                <li><a href="/create" class="href"></a></li>
+                <li><a href="/#comissions">Personalizado</a></li>
+                <li><a href="/#type-product-1">Platos</a></li>
+                <li><a href="/#type-product-2">Tazas</a></li>
+                <li><a href="/products/create" class="href">Crear un Producto</a></li>
+                <li><a href="/products/cart" class="href"><div class="header-cart">
+                    <i class="fa-solid fa-cart-shopping"></i></div></a>
+                </li>
             </div>
         </nav>
     </div>
