--- a/miProyecto/public/css/header.css
+++ b/miProyecto/public/css/header.css
@@ -2,7 +2,6 @@
     background-color: #fff2e2;
     position: fixed;
     opacity: 90%;
-    z-index: unset;
     width:100%;
 }
 
@@ -33,12 +32,18 @@
     color: #B80F0A;
 }
 
+.header--user {
+    display:flex;
+    flex-direction: row;
+    list-style: none;
+}
+
 @media (width > 1024px) {
     .header--container {
         display: flex;
-        flex-direction: row;
-        align-items:baseline;
-        justify-content: space-between;
+        flex-direction: column;
+        align-items:center;
+        justify-content: center;
         padding: 10px;
     }
 
@@ -54,5 +59,14 @@
 
     .header--nav-desktop li:hover {
         font-size: 25.5px;
+    }
+
+    .header--user li{
+        justify-content: space-between;
+        padding: 5px;
+    }
+
+    .header--user li p{
+        margin:0
     }
 }
