--- a/miProyecto/public/css/style.css
+++ b/miProyecto/public/css/style.css
@@ -4,6 +4,7 @@
 @import url('./product.css');
 @import url('./login.css');
 @import url('./register.css');
+@import url('./cart.css');
 
 @import url('https://fonts.googleapis.com/css2?family=Borel&family=Delius&display=swap');
 
