--- a/miProyecto/views/products/detail.ejs
+++ b/miProyecto/views/products/detail.ejs
@@ -1,69 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
-    <%- include('./partials/head',{
-        title : 'Home'
-      }) %>
-        <%- include('./partials/header') %>
-<body>
+<html>
+  <%- include('../partials/head',{
+    title : 'Home'
+  }) %>
+  <body>
+    <%- include('../partials/header') %>
     <main>
-        <div class="form-container">
-            <div class="nav-menu">
-            <div class="login-premise">
-                <p class="premise">¡Bienvenido de vuelta!</p>
+      <section class="product-total">
+        <article class="product-info">
+          <div class="product">
+            <div class="product-name">
+              <p>Plato Playo</p> <a href="/products/edit">Editar producto</a>
             </div>
-            <div class="box--register">
-                <a href="/register" class="register">Registrarse</a>
+            <div class="product-choice">
+              <div class="product--choice-premise">
+                <p>Elige tu diseño favorito</p>
             </div>
-        </div>            
-        <div class="login-form">
-                <h4 class="login-title">Login</h4>
-                <!-- Formulario para logearse -->
-                <form class="access-form" method="POST">
-                    <!-- input Nombre -->
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Nombre del Producto"/>
-                        <p class="form-text alert-hide">Obligatorio</p>
-                    </div>
-                    <!-- input Descripcion -->
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Descripción</label>
-                        <input type="text" class="form-control" id="description" name="description" placeholder="Descripción del Producto"/>
-                        <p class="form-text alert-hide">Obligatorio</p>
-                    </div>
-                    <!-- input Imágen -->
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Imágen</label>
-                        <input type="text" class="form-control" id="image" name="image" placeholder="Imágen del Producto"
-                        <p class="form-text alert-hide">Obligatorio</p>
-                    </div>
-                    <!-- input Categoría -->
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Categoría</label>
-                        <input type="text" class="form-control" id="category" name="category" placeholder="Categoría del Producto"/>
-                        <p class="form-text alert-hide">Obligatorio</p>
-                    </div>
-                    <!-- input Colores -->
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Colores</label>
-                        <input type="text" class="form-control" id="color" name="color" placeholder="Color del Producto"/>
-                        <p class="form-text alert-hide">Obligatorio</p>
-                    </div>
-                    <!-- input Precio -->
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Precio</label>
-                         <input type="text" class="form-control" id="price" name="price" placeholder="Precio del Producto"/>
-                         <p class="form-text alert-hide">Obligatorio</p>
-                     </div>
-                    <button type="submit" class="btn btn-outline-dark" name="send">Login</button>
-                </form>
-                <div>
-                    <p class="text-danger">
-                        <%= locals.msg && msg %>
-                    </p>
+            <div class="product--choice-container col-6">
+              <div class="product--choice-image">
+                <img src="/images/products/plato-playo2-copy-baja1-423a3919271206888315598402081460-480-0.jpg" alt="plato playo" width="350px">
+              </div>
+              <div class="product--choice-designs-flex">
+                <div class="product--choice-designs-solo">
+                  <div class="product--choice-designs-solo-image">
+                    <img src="/images/products/designs/black-design.jpg" alt="" width="50px">
+                  </div>
+                  <div class="product--choice-designs-solo-title"><p>Diseño negro</p></div>
                 </div>
+                <div class="product--choice-designs-solo">
+                  <div class="product--choice-designs-solo-image">
+                    <img src="/images/products/designs/orange-design.jpg" alt="" width="50px">
+                  </div>
+                  <div class="product--choice-designs-solo-title"><p>Diseño naranja</p></div>
+                </div>
+                <div class="product--choice-designs-solo">
+                  <div class="product--choice-designs-solo-image">
+                    <img src="/images/products/designs/blue-design.png" alt="" width="50px">
+                  </div>
+                  <div class="product--choice-designs-solo-title"><p>Diseño azul</p></div>
+                </div>
+                <div class="product--choice-designs-solo">
+                  <div class="product--choice-designs-solo-image">
+                    <img src="/images/products/designs/butterfly-design.jpg" alt="" width="50px">
+                  </div>
+                  <div class="product--choice-designs-solo-title"><p>Diseño mariposa</p></div>
+                </div>
+              </div>
             </div>
-        </div>
-        </main>
-</body>
+            </div>
+          </div>
+        </article>
+        <article class="product-price">
+          <div class="product--price-container">
+            <div class="product--price-flex">
+              <div class="product--price-digits">
+                <p>Precio</p>
+                <p class="price">$150,00</p>
+              </div>
+            </div>
+            <div class="product--cart-button">
+              <p>Agregar al carrito</p>
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+          </div>
+        </article>
+      </section>
+    </main>
+    <%- include('../partials/footer') %>
+  </body>
 </html>
