--- a/miProyecto/views/users/profile.ejs
+++ b/miProyecto/views/users/profile.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <%- include('./partials/head',{
+  <%- include('../partials/head',{
     title : 'Login'
   }) %>
   <body>
-    <%- include('./partials/header') %>
+    <%- include('../partials/header') %>
     <main>
         <div class="form-container">
             <div class="nav-menu">
@@ -42,6 +42,6 @@
             </div>
         </div>
         </main>
-        <%- include('./partials/footer') %>
+        <%- include('../partials/footer') %>
       </body>
     </html>
