--- a/miProyecto/public/css/index.css
+++ b/miProyecto/public/css/index.css
@@ -94,13 +94,13 @@ body {
 
 /* SECCIÓN TIPO DE PRODUCTO 1 */
 
-.type-product-plate {
-    display: flex;
-    flex-direction: column;
+.div-card-index {
     justify-content: center;
-    padding: 30px;
-    background-color:rgb(255, 249, 241,0.5);
-    margin-top: 10px;
+}
+
+.custom-card {
+   background-color:rgb(255, 249, 241,0.8);
+   padding: 30px;
 }
 
 .type-product-cup {
@@ -113,7 +113,7 @@ body {
 
 .type-product-name {
     font-family: "Borel", cursive;
-    font-size: 50px;
+    font-size: 30px;
     text-align: center;
 }
 
@@ -134,6 +134,6 @@ body {
 
 /* SECCIÓN TIPO DE PRODUCTO 2 */
 
-.type-product-cup {
-    padding-bottom: 200px;
+.container-index-cup {
+    margin-bottom: 200px;
 }
