--- a/miProyecto/views/partials/head.ejs
+++ b/miProyecto/views/partials/head.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/distcss/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/bd1bd77e23.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/style.css" >
     <link rel="stylesheet" href="/css/odometer.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
