href of products added

--- a/miProyecto/views/index.ejs
+++ b/miProyecto/views/index.ejs
@@ -24,7 +24,7 @@
           <div class="comissions-box--title">Personalizá tu diseño con <p>amor</p></div>
           <div class="comissions-box--premise"><div>¡Abrimos nuestro servicio de comisiones!</div><div>¿Querés que tu vajilla tenga un diseño único?</div></div>
           <div class="comissions-box--button">
-            <a href="https://wa.me/1126967301"></a><p><a href="https://wa.me/1126967301">¡Escribinos!</p></a>
+            <p><a href="https://wa.me/1126967301">¡Escribinos!</p></a>
           </div>
         </div>
         </div>
@@ -35,7 +35,7 @@
           <div class="relative overflow-hidden">
               <div class="div-card-index flex space-x-10 transition-transform duration-300 ease-in-out" id="carousel">
                   <div class="custom-card shadow-lg rounded-lg p-8 w-80">
-                      <img src="/images/products/plato-1.png" alt="Producto 1" class="w-full h-80 object-cover rounded-lg">
+                      <a href="/products/detail"><img src="/images/products/plato-1.png" alt="Producto 1" class="w-full h-80 object-cover rounded-lg"></a>
                       <h2 class="mt-2 font-bold text-lg">Reunión Primaveral</h2>
                       <p class="text-gray-700">$19.99</p>
                   </div>
